commit translated contents

--- a/articles/azure-percept/index.yml
+++ b/articles/azure-percept/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: elqu20
   ms.author: v-elqu
   ms.date: 02/11/2021
-  ms.openlocfilehash: 6c7479b33a78432d5b6aea2c02656e8b250b70c7
-  ms.sourcegitcommit: b4647f06c0953435af3cb24baaf6d15a5a761a9c
+  ms.openlocfilehash: b979f147c67e8e877b5bb0e9d3dc557317c7aa50
+  ms.sourcegitcommit: 4b7a53cca4197db8166874831b9f93f716e38e30
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 03/02/2021
-  ms.locfileid: "101658172"
+  ms.lasthandoff: 03/04/2021
+  ms.locfileid: "102097497"
 landingContent:
 - title: Azure Percept とは
   linkLists:
@@ -45,8 +45,22 @@ landingContent:
       url: azure-percept-dk-datasheet.md
     - text: Azure Percept Vision のデータシート
       url: azure-percept-vision-datasheet.md
+    - text: トラブルシューティング
+      url: troubleshoot-dev-kit.md
+- title: Azure Percept Audio の使用を開始する
+  linkLists:
+  - linkListType: quickstart
+    links:
+    - text: Azure Percept Audio をセットアップする
+      url: quickstart-percept-audio-setup.md
+  - linkListType: reference
+    links:
     - text: Azure Percept Audio のデータシート
       url: azure-percept-audio-datasheet.md
+    - text: Azure Percept Audio のトラブルシューティング
+      url: troubleshoot-audio-accessory-speech-module.md
+    - text: Azure Percept Audio の LED とボタン
+      url: audio-button-led-behavior.md
 - title: コードなしのビジョン AI プロトタイプを構築する
   linkLists:
   - linkListType: tutorial
@@ -63,20 +77,10 @@ landingContent:
       url: how-to-capture-images.md
     - text: 開発キットのテレメトリを表示する
       url: how-to-view-telemetry.md
-- title: Azure Percept Audio の使用を開始する
-  linkLists:
-  - linkListType: quickstart
+  - linkListType: concept
     links:
-    - text: Azure Percept Audio をセットアップする
-      url: quickstart-percept-audio-setup.md
-  - linkListType: reference
-    links:
-    - text: Azure Percept Audio のデータシート
-      url: azure-percept-audio-datasheet.md
-    - text: Azure Percept Audio のトラブルシューティング
-      url: troubleshoot-audio-accessory-speech-module.md
-    - text: Azure Percept Audio の LED とボタン
-      url: audio-button-led-behavior.md
+    - text: AI ソリューションの使用
+      url: overview-ai-models.md
 - title: コードなしの音声アシスタント ソリューションを構築する
   linkLists:
   - linkListType: tutorial
@@ -85,22 +89,20 @@ landingContent:
       url: tutorial-no-code-speech.md
   - linkListType: how-to-guide
     links:
-    - text: 音声アシスタントを構成する
-      url: how-to-configure-voice-assistant.md
     - text: 音声アシスタントを管理する
       url: how-to-manage-voice-assistant.md
+    - text: IoT Hub を使って音声アシスタントを構成する
+      url: how-to-configure-voice-assistant.md
 - title: Azure Percept を使用した高度な開発
   linkLists:
   - linkListType: overview
     links:
     - text: 高度な開発の概要
       url: overview-advanced-code.md
-  - linkListType: tutorial
+  - linkListType: how-to-guide
     links:
-    - text: クラウド サービスを使用した高度な開発
-      url: advanced-development-cloud.md
-    - text: ローカル ツールを使用した高度な開発
-      url: advanced-development-local.md
+    - text: Dev Tools Pack Installer
+      url: dev-tools-installer.md
 - title: Azure Percept DK を最新の状態に保つ
   linkLists:
   - linkListType: overview
@@ -109,7 +111,7 @@ landingContent:
       url: overview-update-experience.md
   - linkListType: how-to-guide
     links:
-    - text: 更新の設定
+    - text: 無線での更新を設定する
       url: how-to-set-up-over-the-air-updates.md
     - text: 無線での更新
       url: how-to-update-over-the-air.md
