--- a/articles/iot-fundamentals/index.yml
+++ b/articles/iot-fundamentals/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: philmea
   ms.author: philmea
   ms.date: 09/04/2019
-  ms.openlocfilehash: 568be9f64704932f278f571373fae1bb774e521c
-  ms.sourcegitcommit: c27a20b278f2ac758447418ea4c8c61e27927d6a
+  ms.openlocfilehash: e7f3d47e17b090d04db6a52260c3a4c70db91fba
+  ms.sourcegitcommit: dda0d51d3d0e34d07faf231033d744ca4f2bbf4a
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 03/03/2021
-  ms.locfileid: "101724746"
+  ms.lasthandoff: 03/05/2021
+  ms.locfileid: "102199103"
 highlightedContent:
   items:
   - title: Azure IoT とは?
@@ -29,7 +29,7 @@ highlightedContent:
     url: https://marketplace.visualstudio.com/items?itemName=vsciot-vscode.azure-iot-tools
   - title: Azure CLI を使用した Azure IoT の開発の開始
     itemType: reference
-    url: /cli/azure/azure-cli-reference-for-IoT?view=azure-cli-latest
+    url: /cli/azure/azure-cli-reference-for-IoT
   - title: Azure IoT のコード サンプルの参照
     itemType: overview
     url: /samples/browse/?term=iot
