--- a/articles/cognitive-services/text-analytics/toc.yml
+++ b/articles/cognitive-services/text-analytics/toc.yml
@@ -91,7 +91,7 @@
 - name: リファレンス
   items:
     - name: CLI リファレンス
-      href: /cli/azure/cognitiveservices?view=azure-cli-latest#az_cognitiveservices_list
+      href: /cli/azure/cognitiveservices#az_cognitiveservices_list
     - name: PowerShell リファレンス
       href: /powershell/module/azurerm.cognitiveservices/
     - name: Text Analytics API
