--- a/articles/security-center/TOC.yml
+++ b/articles/security-center/TOC.yml
@@ -5,6 +5,14 @@
   items:
     - name: Azure Security Center とは
       href: security-center-introduction.md
+    - name: Azure Defender とは
+      href: azure-defender.md
+    - name: 新機能
+      displayName: 'changelog, news, release notes'
+      href: release-notes.md
+    - name: 今後予定されている重要な変更
+      displayName: 'release notes, changelog, news'
+      href: upcoming-changes.md
     - name: 可用性
       items:
         - name: サポートされているプラットフォーム
@@ -14,71 +22,22 @@
           href: security-center-services.md
         - name: Azure PaaS リソースを対象とする機能
           href: features-paas.md
-    - name: 新機能
-      items:
-        - name: リリース ノート
-          displayName: 'changelog, news'
-          href: release-notes.md
-        - name: 今後予定されている重要な変更
-          displayName: 'release notes, changelog, news'
-          href: upcoming-changes.md
-        - name: アーカイブされたリリース ノート (6 か月以上前)
-          displayName: 'changelog, news'
-          href: release-notes-archive.md
-    - name: Security Center の基礎
-      items:
-        - name: Security Center の概要ページ
-          href: overview-page.md
-        - name: セキュリティに関する推奨事項
-          href: recommendations-reference.md
-        - name: セキュリティ アラートと意図のキル チェーン
-          href: alerts-reference.md
-        - name: Microsoft が顧客データの安全性を確保する方法
-          href: security-center-data-security.md
-        - name: アクセス許可
+        - name: ユーザーのロールとアクセス許可
+          displayName: RBAC
           href: security-center-permissions.md
-    - name: Azure Defender の高度なセキュリティ
-      items:
-        - name: Azure Defender の概要
-          href: azure-defender.md
-        - name: サーバー用 Azure Defender
-          displayName: VM
-          href: defender-for-servers-introduction.md
-        - name: Azure Defender for App Service
-          href: defender-for-app-service-introduction.md
-        - name: Azure Defender for Storage
-          displayName: 'blob, adls, files'
-          href: defender-for-storage-introduction.md
-        - name: Azure Defender for SQL
-          displayName: database
-          href: defender-for-sql-introduction.md
-        - name: Azure Defender for Key Vault
-          displayName: 'KV, akv'
-          href: defender-for-key-vault-introduction.md
-        - name: Azure Defender for Resource Manager
-          displayName: ARM
-          href: defender-for-resource-manager-introduction.md
-        - name: Azure Defender for DNS
-          displayName: domain
-          href: defender-for-dns-introduction.md
-        - name: Azure Defender for Kubernetes
-          displayName: 'clusters, k8s, aks'
-          href: defender-for-kubernetes-introduction.md
-        - name: コンテナー レジストリ用 Azure Defender
-          displayName: 'ACR, registry, images'
-          href: defender-for-container-registries-introduction.md
-        - name: その他の脅威の防止
-          href: other-threat-protections.md
-    - name: Security Center のコンテナー セキュリティ機能
-      displayName: 'kubernetes, aks, acr, registries, k8s'
-      href: container-security.md
-    - name: 価格
-      href: security-center-pricing.md
+        - name: Security Center (無料) と有効化された Azure Defender
+          href: security-center-pricing.md
 - name: クイックスタート
   items:
-    - name: はじめに
+    - name: 1. サブスクリプションで Security Center を有効にする
       href: security-center-get-started.md
-    - name: ハイブリッド環境を設定する
+    - name: 2. Azure Defender を有効にする
+      href: enable-azure-defender.md
+    - name: 3. 自動プロビジョニングを構成する
+      href: security-center-enable-data-collection.md
+    - name: 4. メール通知の設定
+      href: security-center-provide-security-contact-details.md
+    - name: 5. ハイブリッド コンピューターとマルチクラウド コンピューターの接続
       items:
         - name: Azure 以外のマシンを接続する
           displayName: 'azure stack, ash, windows, linux, hybrid, arc'
@@ -89,17 +48,12 @@
         - name: GCP アカウントを接続する
           displayName: 'hybrid, multicloud, google'
           href: quickstart-onboard-gcp.md
-    - name: PowerShell を使用したオンボードの自動化
-      href: security-center-powershell-onboarding.md
-    - name: 管理グループに対して Security Center を有効にする
-      href: onboard-management-group.md
-    - name: 自動プロビジョニングを構成する
-      href: security-center-enable-data-collection.md
-    - name: メール通知の設定
-      href: security-center-provide-security-contact-details.md
-    - name: ARM テンプレートを使用してアラートへの自動応答を作成する
-      displayName: Resource Manager
+    - name: 6. アラートへの自動応答の作成
+      displayName: 'Resource Manager, ARM'
       href: quickstart-automation-alert.md
+    - name: 7. コンプライアンス ダッシュボードの標準を選択する
+      displayName: 'regulatory, regulation, CIS, PCI DSS, ISO, SOC, ASB, Benchmark, Azure Security Benchmark, HIPAA'
+      href: update-regulatory-compliance-packages.md
 - name: チュートリアル
   items:
     - name: 計画と運用のガイド
@@ -114,74 +68,59 @@
       href: tutorial-security-policy.md
 - name: 概念
   items:
-    - name: クラウドのセキュリティ体制の管理
+    - name: クラウド セキュリティ態勢管理の概念
       items:
-        - name: Asset Inventory によるリソースの管理
-          href: asset-inventory.md
-        - name: セキュリティ スコア
+        - name: ポリシー、イニシアチブ、推奨事項
+          href: security-policy-concept.md
+        - name: セキュリティで保護されたスコアとセキュリティの制御
           href: secure-score-security-controls.md
-        - name: セキュリティ レコメンデーションの概要
-          href: security-center-recommendations.md
-        - name: 推奨事項を使用してセキュリティを強化する
-          href: security-center-using-recommendations.md
-        - name: セキュリティ ベースライン
-          href: security-baseline.md
-        - name: テナント間の管理
-          href: security-center-cross-tenant-management.md
-        - name: Windows Admin Center サーバーの保護
-          href: windows-admin-center-integration.md
-        - name: セキュリティ ソリューションとデータ ソースの統合
-          href: security-center-partner-integration.md
+        - name: 推奨事項のリファレンス一覧
+          href: recommendations-reference.md
+    - name: クラウド ワークロード保護の概念
+      items:
+        - name: セキュリティのアラートとインシデント
+          href: security-center-alerts-overview.md
+        - name: アラートの参照リスト
+          href: alerts-reference.md
+- name: 操作方法ガイド
+  items:
+    - name: 概要ダッシュボードを使用する
+      displayName: 'overview, compliance, inventory'
+      href: overview-page.md
+    - name: Azure Defender ダッシュボードを使用する
+      href: azure-defender-dashboard.md
+    - name: セキュリティで保護されたスコアにアクセスして追跡する
+      href: secure-score-access-and-track.md
+    - name: Asset Inventory によるリソースの管理
+      href: asset-inventory.md
+    - name: Security Center データの対話型レポートを作成する
+      displayName: 'workbooks, Secure Score Over Time, Vulnerability Assessment Findings'
+      href: custom-dashboards-azure-workbooks.md
     - name: セキュリティのレコメンデーションを使用してセキュリティを強化する
       items:
+        - name: セキュリティの推奨事項を確認する
+          href: security-center-recommendations.md
         - name: 推奨事項の修復
           href: security-center-remediate-recommendations.md
         - name: 適用/拒否を使用した構成ミスの防止
           displayName: recommendations
           href: prevent-misconfigurations.md
-        - name: セキュリティ体制の強化
-          href: security-center-monitoring.md
-        - name: 推奨事項のリファレンス一覧
-          href: recommendations-reference.md
-        - name: セキュリティに関する推奨事項の管理
-          items:
-            - name: レコメンデーションへの応答を自動化する
-              displayName: workflow
-              href: workflow-automation.md
-            - name: リソースを推奨事項から除外する
-              href: exempt-resource.md
-        - name: ネットワーク リソースの保護
-          href: security-center-network-recommendations.md
-        - name: ID とアクセス権限の保護
-          href: security-center-identity-access.md
-    - name: セキュリティ アラートの詳細
-      items:
-        - name: セキュリティ アラートの概要
-          href: security-center-alerts-overview.md
-        - name: アラートの参照リスト
-          href: alerts-reference.md
-        - name: アラートのスキーマ
-          href: alerts-schemas.md
-        - name: セキュリティ インシデントの概要
-          href: security-center-alerts-cloud-smart.md
-- name: 操作方法ガイド
-  items:
-    - name: Azure Defender ダッシュボードを使用する
-      href: azure-defender-dashboard.md
-    - name: セキュリティ ポリシーとコンプライアンス標準を構成する
-      items:
-        - name: カスタム セキュリティ ポリシーの作成
+        - name: レコメンデーションへの応答を自動化する
+          displayName: workflow
+          href: workflow-automation.md
+        - name: リソースを推奨事項から除外する
+          href: exempt-resource.md
+        - name: カスタム セキュリティ イニシアチブとポリシーを作成する
           href: custom-security-policies.md
-        - name: Azure Policy REST API を使用したポリシーの管理
-          href: configure-security-policy-azure-policy.md
-        - name: コンプライアンス ダッシュボードの標準を選択する
-          displayName: 'regulatory, regulation, CIS, PCI DSS, ISO, SOC, Benchmark, Azure Security Benchmark, HIPAA'
-          href: update-regulatory-compliance-packages.md
-    - name: サーバー用 Azure Defender を使用する
+    - name: サーバー用 Azure Defender を使用してコンピューターを保護する
+      displayName: 'hybrid, arc, Azure Defender for machines'
       items:
+        - name: サーバー用 Azure Defender の概要
+          displayName: VM
+          href: defender-for-servers-introduction.md
         - name: 脆弱性のスキャン
           items:
-            - name: マシン用の統合された VA スキャナー
+            - name: 統合 VA スキャナーでコンピューターをスキャンする
               displayName: 'qualys, vulnerability, arc, hybrid'
               href: deploy-vulnerability-assessment-vm.md
             - name: BYOL VA ソリューションで VM をスキャンする
@@ -204,10 +143,10 @@
         - name: 統合された Microsoft Defender for Endpoint ライセンスを使用する
           displayName: 'ATP, mdatp, wdatp'
           href: security-center-wdatp.md
-        - name: 適応型アプリケーション制御を管理する
-          displayName: 'aac, whitelist, allowlist, reviewgroup'
+        - name: コンピューターの安全なアプリケーションの一覧を定義する
+          displayName: 'aac, whitelist, allowlist, reviewgroup, adaptive application controls'
           href: security-center-adaptive-application.md
-        - name: ファイルの整合性の監視を使用する
+        - name: ファイルの整合性の監視によるファイルとレジストリの変更の追跡
           items:
             - name: ファイルの整合性の監視の概要
               displayName: 'fim, change'
@@ -215,47 +154,120 @@
             - name: ファイルの整合性の監視を使用してベースラインを比較する
               displayName: 'fim, change'
               href: security-center-file-integrity-monitoring-baselines.md
-        - name: アダプティブ ネットワークのセキュリティ強化機能を管理する
+        - name: アダプティブ ネットワークのセキュリティ強化により、ネットワークのセキュリティ体制を向上させる
           displayName: anh
           href: security-center-adaptive-network-hardening.md
         - name: Docker ホストのセキュリティを強化する
           displayName: containers
           href: harden-docker-hosts.md
-    - name: Azure Defender for SQL を使用する
-      href: defender-for-sql-usage.md
-      displayName: 'hybrid, arc'
-    - name: コンテナー レジストリ用 Azure Defender を使用する
+    - name: SQL リソースの保護
       items:
+        - name: Azure Defender for SQL の概要
+          displayName: database
+          href: defender-for-sql-introduction.md
+        - name: コンピューター上で SQL サーバー用 Defender を有効にする
+          href: defender-for-sql-usage.md
+          displayName: 'hybrid, arc, Azure Defender'
+        - name: SQL リソースの脆弱性をスキャンする
+          href: defender-for-sql-on-machines-vulnerability-assessment.md
+          displayName: 'hybrid, arc, Azure Defender'
+        - name: SQL Server での脆弱性の検出を無効にする
+          displayName: 'VA, registry, vulnerabilities'
+          href: defender-for-sql-on-machines-vulnerability-assessment.md#disable-specific-findings-preview
+        - name: SQL 情報の保護ポリシーをカスタマイズする
+          displayName: 'sql, database, data discovery'
+          href: security-center-info-protection-policy.md
+    - name: コンテナー化された環境を保護する
+      displayName: Azure Defender
+      items:
+        - name: Security Center のコンテナー セキュリティ機能
+          displayName: 'kubernetes, aks, acr, registries, k8s'
+          href: container-security.md
+        - name: Kubernetes 用 Defender の概要
+          displayName: 'clusters, k8s, aks'
+          href: defender-for-kubernetes-introduction.md
+        - name: コンテナー レジストリ用 Defender の概要
+          displayName: 'ACR, registry, images'
+          href: defender-for-container-registries-introduction.md
         - name: レジストリ イメージの脆弱性をスキャンする
           displayName: 'ACR, registry, images, qualys'
           href: defender-for-container-registries-usage.md
         - name: 特定のイメージの脆弱性の検出結果を無効にする (プレビュー)
           displayName: 'ACR, registry, images, qualys'
           href: defender-for-container-registries-usage.md#disable-specific-findings-preview
-    - name: アラートと推奨事項のエクスポート
+        - name: Kubernetes ワークロードを保護する
+          displayName: 'k8s, containers, aks'
+          href: kubernetes-workload-protections.md
+    - name: Azure App Service Web アプリと API を保護する
+      displayName: 'Azure Defender for App Service, defender for app'
+      href: defender-for-app-service-introduction.md
+    - name: Azure Storage アカウントを保護する
+      displayName: 'blob, adls, files, Azure Defender for Storage, Defender for Storage'
+      href: defender-for-storage-introduction.md
+    - name: Key Vault キーとシークレットを保護する
       items:
-        - name: SIEM、SOAR、または ITSM へのエクスポート
-          displayName: 'continuous, SIEM, SOAR, Splunk, QRadar, ServiceNow, ArcSight, Monitor, Graph, Sentinel,'
-          href: export-to-siem.md
-        - name: Log Analytics ワークスペースまたは Azure イベント ハブへのエクスポート
-          displayName: continuous
-          href: continuous-export.md
-        - name: すべてのアラートの CSV レポートをダウンロードする
-          href: continuous-export.md#manual-one-time-export-of-alerts-and-recommendations
-    - name: セキュリティ アラートの処理
-      items:
-        - name: セキュリティ アラートの管理
-          href: security-center-managing-and-responding-alerts.md
-        - name: アラート抑制ルールの作成および管理
-          href: alerts-suppression-rules.md
+        - name: Key Vault 用 Azure Defender の概要
+          displayName: 'KV, akv'
+          href: defender-for-key-vault-introduction.md
         - name: Azure Defender の Key Vault アラートに対応する
           displayName: 'akv, kv'
           href: defender-for-key-vault-usage.md
-        - name: Azure Defender for DNS アラートに対応する
-          href: defender-for-dns-usage.md
+    - name: リソース管理操作の監視
+      items:
+        - name: Resource Manager 用 Azure Defender の概要
+          displayName: ARM
+          href: defender-for-resource-manager-introduction.md
         - name: Azure Defender for Resource Manager アラートに対応する
           displayName: arm
           href: defender-for-resource-manager-usage.md
+    - name: Azure リソースからの DNS クエリの監視
+      items:
+        - name: DNS 用 Azure Defender の概要
+          displayName: 'domain, Defender for DNS'
+          href: defender-for-dns-introduction.md
+        - name: Azure Defender for DNS アラートに対応する
+          href: defender-for-dns-usage.md
+    - name: Windows Admin Center サーバーの保護
+      href: windows-admin-center-integration.md
+    - name: セキュリティ ソリューションとデータ ソースの統合
+      href: security-center-partner-integration.md
+    - name: ネットワーク リソースの保護
+      href: security-center-network-recommendations.md
+    - name: ID とアクセス権限の保護
+      href: security-center-identity-access.md
+    - name: Security Center の追加の脅威保護を使用する
+      href: other-threat-protections.md
+    - name: サブスクリプション、ユーザー、およびアクセス許可の管理
+      items:
+        - name: 管理グループとサブスクリプションを整理する
+          href: security-center-management-groups.md
+        - name: テナント全体のアクセス許可を付与および要求する
+          displayName: 'global admin, Azure Active Directory (AD), AAD'
+          href: tenant-wide-permissions-management.md
+        - name: 管理グループに対して Security Center を有効にする
+          href: onboard-management-group.md
+        - name: テナント間管理の設定
+          href: security-center-cross-tenant-management.md
+        - name: PowerShell を使用したオンボードの自動化
+          href: security-center-powershell-onboarding.md
+    - name: アラート、インシデント、および脅威レポートの管理
+      items:
+        - name: セキュリティの警告への対応
+          href: security-center-managing-and-responding-alerts.md
+        - name: アラート抑制ルールの作成および管理
+          href: alerts-suppression-rules.md
+        - name: アラートと推奨事項のエクスポート
+          items:
+            - name: SIEM、SOAR、または ITSM へのエクスポート
+              displayName: 'continuous, SIEM, SOAR, Splunk, QRadar, ServiceNow, ArcSight, Monitor, Graph, Sentinel,'
+              href: export-to-siem.md
+            - name: Log Analytics ワークスペースまたは Azure イベント ハブへのエクスポート
+              displayName: continuous
+              href: continuous-export.md
+            - name: すべてのアラートの CSV レポートをダウンロードする
+              href: continuous-export.md#manual-one-time-export-of-alerts-and-recommendations
+            - name: アラートのスキーマ
+              href: alerts-schemas.md
         - name: セキュリティ インシデントを管理する
           href: security-center-incident.md
         - name: 脅威インテリジェンス レポートを生成する
@@ -266,18 +278,17 @@
         - name: アラートへの応答を自動化する
           displayName: workflow
           href: workflow-automation.md
-    - name: Kubernetes ワークロードを保護する
-      displayName: 'k8s, containers, aks'
-      href: kubernetes-workload-protections.md
-    - name: テナント全体の可視性の確保
-      href: security-center-management-groups.md
-    - name: SQL 情報の保護ポリシーをカスタマイズする
-      displayName: 'sql, database, data discovery'
-      href: security-center-info-protection-policy.md
 - name: リファレンス
   items:
-    - name: REST API
+    - name: アーカイブされたリリース ノート (6 か月以上前)
+      displayName: 'changelog, news'
+      href: release-notes-archive.md
+    - name: Microsoft が顧客データの安全性を確保する方法
+      href: security-center-data-security.md
+    - name: REST API ドキュメント
       href: /rest/api/securitycenter/
+    - name: セキュリティ ベースライン
+      href: security-baseline.md
     - name: Azure Security Center の FAQ
       items:
         - name: 一般的な質問
