--- a/articles/communication-services/toc.yml
+++ b/articles/communication-services/toc.yml
@@ -38,6 +38,8 @@
       items:
         - name: 音声通話をアプリに追加する
           href: quickstarts/voice-video-calling/getting-started-with-calling.md
+        - name: 音声通話をアプリに追加する (JavaScript)
+          href: quickstarts/voice-video-calling/get-started-with-video-calling.md
         - name: 通話クライアント ライブラリを使用する
           href: quickstarts/voice-video-calling/calling-client-samples.md
         - name: 通話アプリを Teams の会議に参加させる
