--- a/articles/cloud-services-extended-support/toc.yml
+++ b/articles/cloud-services-extended-support/toc.yml
@@ -82,7 +82,7 @@
     - name: Az.CloudService モジュール
       href: 'https://www.powershellgallery.com/packages/Az.CloudService/0.1.0'
     - name: PowerShell コマンドレット
-      href: /powershell/module/az.cloudservice/?view=azps-5.4.0#cloudservice
+      href: /powershell/module/az.cloudservice/#cloudservice
     - name: ARM テンプレート リファレンス
       href: /azure/templates/microsoft.compute/cloudservices
     - name: REST
