--- a/bread/toc.yml
+++ b/bread/toc.yml
@@ -274,6 +274,10 @@
     - name: Azure Stack
       tocHref: /azure/azure-stack/
       topicHref: /azure/azure-stack/
+      items:
+        - name: Azure Stack Edge
+          tocHref: /azure/databox-online/
+          topicHref: /azure/databox-online/
     - name: Azure Stack ユーザー
       tocHref: /azure/azure-stack/user/
       topicHref: /azure/azure-stack/user/
@@ -467,9 +471,6 @@
         - name: Data Box のオフライン転送
           tocHref: /azure/databox/
           topicHref: /azure/databox/
-        - name: Data Box のオンライン転送
-          tocHref: /azure/databox-online/
-          topicHref: /azure/databox-online/
         - name: Data Box Gateway
           tocHref: /azure/databox-gateway/
           topicHref: /azure/databox-gateway/
