commit translated contents

--- a/articles/hdinsight/TOC.yml
+++ b/articles/hdinsight/TOC.yml
@@ -273,9 +273,9 @@
         - name: Azure PowerShell
           href: /powershell/module/az.hdinsight
         - name: .NET 用 SDK
-          href: /dotnet/api/overview/azure/hdinsight?view=azure-dotnet&preserve-view=true
+          href: /dotnet/api/overview/azure/hdinsight
         - name: Python 用 SDK
-          href: /python/api/overview/azure/hdinsight?view=azure-python&preserve-view=true
+          href: /python/api/overview/azure/hdinsight
         - name: SDK for Java
           href: /java/api/overview/azure/hdinsight
         - name: Go 用 SDK
