--- a/articles/active-directory/authentication/TOC.yml
+++ b/articles/active-directory/authentication/TOC.yml
@@ -55,7 +55,7 @@
         - name: ライセンス
           href: concept-mfa-licensing.md
         - name: Office 365 での MFA
-          href: /office365/admin/security-and-compliance/set-up-multi-factor-authentication?view=o365-worldwide
+          href: /office365/admin/security-and-compliance/set-up-multi-factor-authentication
         - name: よく寄せられる質問
           href: multi-factor-authentication-faq.md
     - name: パスワード保護
