--- a/articles/azure-monitor/index.yml
+++ b/articles/azure-monitor/index.yml
@@ -8,12 +8,12 @@ metadata:
   author: rboucher
   ms.author: robb
   ms.date: 10/08/2019
-  ms.openlocfilehash: 4753e4bb7fca1dadf0266c8fae11313872b29a3b
-  ms.sourcegitcommit: c27a20b278f2ac758447418ea4c8c61e27927d6a
+  ms.openlocfilehash: faa8dbd319896cc57f3b04f7ec48000ec2426f0e
+  ms.sourcegitcommit: 6386854467e74d0745c281cc53621af3bb201920
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 03/03/2021
-  ms.locfileid: "101725715"
+  ms.lasthandoff: 03/08/2021
+  ms.locfileid: "102452715"
 landingContent:
 - title: Azure Monitor について
   linkLists:
@@ -86,11 +86,11 @@ landingContent:
   - linkListType: reference
     links:
     - text: メトリック、自動スケール、診断設定、アラート
-      url: /powershell/module/az.monitor/?view=azps-2.6.0
+      url: /powershell/module/az.monitor
     - text: Log Analytics
       url: /powershell/module/az.operationalinsights
     - text: Application Insights
-      url: /powershell/module/az.applicationinsights/new-azapplicationinsights?view=azps-2.7.0&viewFallbackFrom=azps-2.5.0
+      url: /powershell/module/az.applicationinsights/new-azapplicationinsights
 - title: リファレンス - REST API
   linkLists:
   - linkListType: reference
