--- a/articles/cognitive-services/QnAMaker/toc.yml
+++ b/articles/cognitive-services/QnAMaker/toc.yml
@@ -32,14 +32,16 @@
       href: Concepts/data-sources-and-content.md
     - name: Azure ロールベースのアクセス制御 (Azure RBAC)
       href: Concepts/role-based-access-control.md
+    - name: 正確な回答
+      href: reference-precise-answering.md
+    - name: アクティブ ラーニングを有効にする
+      href: How-To/use-active-learning.md
     - name: ランカー プロセス
       displayName: 'DefaultAnswer, Default answer'
       href: Concepts/query-knowledge-base.md
     - name: 開発ライフサイクル
       href: Concepts/development-lifecycle-knowledge-base.md
       displayName: 'version control, test, index, publish, monitor usage, create'
-    - name: 正確な回答
-      href: reference-precise-answering.md
     - name: ベスト プラクティス
       href: Concepts/best-practices.md
       displayName: 'tag, rank, score, threshold, question, alternate, filter, synonym, answer, active learning, collaborate, alteration, metadata, bot, personality, extraction, chit-chat'
@@ -67,7 +69,7 @@
         - name: 新しいナレッジ ベースへの移行
           href: Tutorials/migrate-knowledge-base.md
           displayName: 'metadata, pair'
-        - name: テスト
+        - name: ナレッジ ベースのテスト
           href: How-To/test-knowledge-base.md
     - name: QnA ペアの管理
       items:
@@ -87,13 +89,9 @@
           displayName: 'isTest, test, route, request, http, post, body, header, json, metadata, top, strictFilters, GenerateAnswer, API, answer, RankerType, id, text, question, context, 200, 2xx, 400, 401, 403, 404'
         - name: メタデータによる QnA のフィルター処理
           href: How-To/query-knowledge-base-with-metadata.md
-    - name: ナレッジ ベースを強化するようアクティブ ラーニングを設定する
-      items:
-        - name: アクティブ ラーニングを有効にする
-          href: How-To/use-active-learning.md
-        - name: 推奨される代わりの質問の取得
-          href: How-to/improve-knowledge-base.md
-          displayName: 'active learning, suggestion, dialog prompt, train api, feedback loop, autolearn, auto-learn, user setting, service setting, services setting, accept, reject, filter by suggestion, filter active learning, clusterHead, totalAutoSuggestedCount, totalUserSuggestedCount, autoSuggestedCount, userSuggestedCount'
+    - name: アクティブ ラーニングによって提案される代わりの質問の取得
+      href: How-to/improve-knowledge-base.md
+      displayName: 'active learning, suggestion, dialog prompt, train api, feedback loop, autolearn, auto-learn, user setting, service setting, services setting, accept, reject, filter by suggestion, filter active learning, clusterHead, totalAutoSuggestedCount, totalUserSuggestedCount, autoSuggestedCount, userSuggestedCount'
     - name: 分析とテレメトリ
       href: How-To/get-analytics-knowledge-base.md
 - name: リファレンス
