--- a/articles/cognitive-services/form-recognizer/toc.yml
+++ b/articles/cognitive-services/form-recognizer/toc.yml
@@ -8,7 +8,7 @@
     - name: 新機能
       href: whats-new.md
 - name: Form Recognizer の概要
-  expaned: true
+  expanded: true
   items:
     - name: クライアント ライブラリまたは REST API を使用する
       href: quickstarts/client-library.md
@@ -26,18 +26,27 @@
       href: tutorial-bulk-processing.md
 - name: 概念
   items:
-    - name: レイアウトの抽出
-      href: concept-layout.md
+    - name: Layout API
+      expanded: true
+      items:
+        - name: フォーム データを抽出する
+          href: concept-layout.md
+    - name: カスタム モデル
+      href: concept-custom.md
     - name: Receipts
       href: concept-receipts.md
     - name: 名刺
       href: concept-business-cards.md
     - name: Invoices
       href: concept-invoices.md
+    - name: 身分証明書
+      href: concept-identification-cards.md
 - name: 操作方法ガイド
   items:
     - name: トレーニング データ セットの作成
       href: build-training-data-set.md
+    - name: テーブル タグを使用したカスタム フォーム モデルのトレーニング
+      href: supervised-table-tags.md
     - name: サンプル ラベル付けツールのデプロイ
       href: deploy-label-tool.md
     - name: コンテナーの使用
@@ -57,8 +66,8 @@
       href: disaster-recovery.md
 - name: リファレンス
   items:
-    - name: Form Recognizer API v2.1 プレビュー
-      href: 'https://westcentralus.dev.cognitive.microsoft.com/docs/services/form-recognizer-api-v2-1-preview-2/operations/AnalyzeBusinessCardAsync'
+    - name: Form Recognizer API v2.1 preview.3
+      href: 'https://westus.dev.cognitive.microsoft.com/docs/services/form-recognizer-api-v2-1-preview-3/operations/AnalyzeWithCustomForm'
     - name: Form Recognizer API v2.0
       href: 'https://westus2.dev.cognitive.microsoft.com/docs/services/form-recognizer-api-v2/operations/AnalyzeWithCustomForm'
     - name: SDK
