--- a/articles/cognitive-services/Speech-Service/toc.yml
+++ b/articles/cognitive-services/Speech-Service/toc.yml
@@ -61,6 +61,8 @@
           href: how-to-custom-speech-continuous-integration-continuous-deployment.md
         - name: ヒューマン ラベル付け文字起こしを作成する
           href: how-to-custom-speech-human-labeled-transcriptions.md
+        - name: モデルとエンドポイントのライフサイクル
+          href: how-to-custom-speech-model-and-endpoint-lifecycle.md
     - name: リファレンス
       items:
         - name: C++
@@ -529,6 +531,8 @@
           displayName: 'ACI,azure container instances,container instances,containers'
           maintainContext: true
           href: ../containers/azure-container-instance-recipe.md
+        - name: コンテナーの FAQ
+          href: speech-container-faq.md
         - name: Cognitive Services コンテナーのドキュメント
           href: ../containers/index.yml
 - name: デバイス
